--- a/src/components/styles/Portfolio.css
+++ b/src/components/styles/Portfolio.css
@@ -2,6 +2,7 @@
     margin-bottom: 3%;
     background-color: rgb(110, 6, 95);
     border-radius: 1.5rem;
+    margin-top: 7%;
 }
 
 .portfolio_container {
