--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 70px;
   background-color: #00C2FF;
+  background-image: linear-gradient(to bottom right, white, #00C2FF, rgb(140, 54, 211));
+
   display: flex;
   flex-direction: row;
   position: fixed;
