--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -2,7 +2,8 @@
     
     width: 100%;
     height: 50px;
-    background-color: #00C2FF;
+    /* background-color: #00C2FF; */
+    background-image: linear-gradient(to bottom right, white, #00C2FF, rgb(140, 54, 211));
     display: flex;
     flex-direction: row;
     position: relative;
