--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -20,7 +20,8 @@
     display: grid;
     flex-direction: row;
     margin-bottom: 4%;
-    background-color: rgb(174, 165, 165);
+    /* background-color: rgb(174, 165, 165); */
+    /* background-image: linear-gradient(to bottom, rgb(35, 112, 142), rgb(140, 54, 211)); */
     padding: 0.5rem;
     position: relative;
     top: 50%;
@@ -37,7 +38,8 @@
     /* padding-left: 0.9rem; */
     border-radius: 1.5rem;
     border: 1px solid transparent;
-    background-color: rgb(35, 112, 142);
+    background-color: rgb(0, 0, 0);
+    /* background-image: linear-gradient(to bottom, rgb(35, 112, 142, rgb(140, 54, 211)); */
 }
 
 .attribute_content {
@@ -63,7 +65,9 @@
 }
 
 .links_item {
-    background-color: rgb(5, 75, 35);
+    background-color: white;
+    background-image: linear-gradient(to top left, rgb(179, 179, 179), rgb(36, 80, 99));
+
 }
 
 .links_content {
