--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,17 +1,73 @@
+
+.about_header {
+  position: relative;
+  height: 1.5px;
+  width: 100%;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  margin-top: 10.5%; 
+  text-align: center;   
+  margin-bottom: 12.5%;
+}
+
+.about_header h1 {
+  position: relative;
+  display: inline-block;
+  font-size: 6rem;
+  font-weight: 500;
+  animation: float 5s ease-in-out infinite;
+}
+
 .about_section {
     display: flex;
-    margin-top: 7%;
+    /* margin-top: 7%; */
   }
 
-  .about_container {
-    display: grid;
-    margin: 3%;
-    grid-template-columns: repeat(2, 1fr);
-
-  }
+  
   
   .about_img {
     border-radius: 50%;
-    width: 280px;
-    align-items: center;
+    width: 180px;
   }
+
+  .tech_container {
+    margin-bottom: 1.3%;
+  }
+
+  .item_tag {
+   margin-right: 1%;
+  }
+
+  .lang_tech {
+    margin-bottom: 7%;
+    margin-top: 8%;
+  }
+
+  .about_item {
+    display: flex;
+    transform: translate(10%, 5%);
+  }
+
+  .about_itm {
+    background: var(--color-bg-variant);
+    padding: 3.5rem 3.5rem;
+    padding-bottom: 3.5rem;
+    border-radius: 1.5rem;
+    border: 1px solid transparent;
+    background-color: rgb(136, 130, 193);
+    background-image: linear-gradient(to bottom right, rgb(179, 179, 179), rgb(36, 80, 99));
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: white;
+    text-align: justify;
+    text-justify: inter-word;
+    transition: 0.3s;
+}
+
+.about_itm:hover {
+    border-color: var(--color-primary-variant);
+    border: 1px solid transparent;
+    background: transparent;
+    color: whitesmoke;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+  
