--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,19 +1,12 @@
 .footer {
-    
-    width: 100%;
-    height: 50px;
-    /* background-color: #00C2FF; */
-    background-image: linear-gradient(to bottom right, white, #00C2FF, rgb(140, 54, 211));
-    display: flex;
-    flex-direction: row;
+    height: 60px;
     position: relative;
-    /* bottom: 0; */
-    /* margin: 0 auto; */
-    /* clear:both; */
-    /* margin-top: -1px; */
-    /* padding: 5px; */
-
-
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(to top, #010c21, #203043);
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 0.5rem 0;
 }
 
 .footer .leftSide {
@@ -25,7 +18,7 @@
   }
   
   .footer .leftSide img {
-    width: 150px;
+    width: 135px;
     margin-right: 40px;
   }
   
