--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,27 +1,46 @@
+
+/* #particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #ccc;
+    background-size: cover;
+    background-position: 50% 50%;
+  } */
+
 .home_header {
     position: relative;
-    height: 100%;
+    height: 1.5px;
     width: 100%;
     text-align: center;
     color: black;
-    margin-top: 5.1%;
+    margin-top: 15.5%; 
+    text-align: center;   
+    margin-bottom: 9.5%;
+    /* padding: 1.5 rem; */
 }
 
 .home_header h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -65%);
-    font-size: 374%;
+    position: relative;
+    display: inline-block;
+    /* top: 50px; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    font-size: 4rem;
     font-weight: 500;
+    animation: float 5s ease-in-out infinite;
+    
+    /* margin: -5%; */
+    /* margin-left: 15%; */
+    margin-bottom: 10px;
 }
 
 .attribute_container {
     display: grid;
     flex-direction: row;
     margin-bottom: 4%;
+    padding-top: 4%;
     /* background-color: rgb(174, 165, 165); */
-    /* background-image: linear-gradient(to bottom, rgb(35, 112, 142), rgb(140, 54, 211)); */
     padding: 0.5rem;
     position: relative;
     top: 50%;
@@ -33,14 +52,28 @@
 }
 
 .attribute_item {
+    margin-top: 15.5rem;
     padding: 1.3rem 1.5rem;
-    padding-bottom: 1.3rem;
+    padding-bottom: 1.5rem;
     /* padding-left: 0.9rem; */
     border-radius: 1.5rem;
     border: 1px solid transparent;
     background-color: rgb(0, 0, 0);
-    /* background-image: linear-gradient(to bottom, rgb(35, 112, 142, rgb(140, 54, 211)); */
+    
+    animation: float 5s ease-in-out infinite;
 }
+
+@keyframes float {
+    0% {
+      transform:  translate3d(0, 0, 0);
+    }
+    50% {
+      transform:  translate3d(0, 10px, 0);
+    }
+    100% {
+      transform: translate3d(0, 0, 0);
+    }
+  }
 
 .attribute_content {
     padding: 0.3rem;
@@ -66,8 +99,8 @@
 
 .links_item {
     background-color: white;
-    background-image: linear-gradient(to top left, rgb(179, 179, 179), rgb(36, 80, 99));
-
+    background-image: linear-gradient(to top right, rgb(179, 179, 179), rgb(36, 80, 99));
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .links_content {
