--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,36 +1,37 @@
 .navbar {
   width: 100%;
-  height: 70px;
-  background-color: #00C2FF;
-  background-image: linear-gradient(to bottom right, white, #00C2FF, rgb(140, 54, 211));
-
+  height: 75px;
+  /* background-color: #00C2FF; */
+  background: linear-gradient(to top, #3f5e9b, #c2d3da);
   display: flex;
   flex-direction: row;
   position: fixed;
  top: 0;
  z-index: 1;
  overflow: hidden;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ padding-right: 5.5rem;
 }
 
 .navbar .leftSide {
+  display: flex;
   flex: 50%;
   height: 100%;
-  display: flex;
   align-items: center;
-  padding-left: 150px;
+  padding-left: 100px;
 }
 
 .navbar .leftSide img {
-  width: 250px;
-  margin-right: 40px;
+  width: 135px;
 }
 
 .navbar .rightSide {
-  flex: 70%;
   height: 100%;
   display: flex;
+  flex: 50%;
   align-items: center;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
+  padding: 0rem 0.5rem 1.5rem 0rem;
   
 }
 
