--- a/src/components/styles/Portfolio.css
+++ b/src/components/styles/Portfolio.css
@@ -1,43 +1,46 @@
-.porfolio_header {
-    margin-bottom: 3%;
-    background-color: rgb(110, 6, 95);
-    border-radius: 1rem;
-    margin-top: 7%;
-    animation-name: port_header;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;    
+.portfolio_header {
+    position: relative;
+    height: 1.5px;
+    width: 100%;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    margin-top: 10.5%; 
+    text-align: center;   
+    margin-bottom: 12.5%;
 }
 
-@keyframes port_header {
-    25%  {background-color:blueviolet; left:200px; top:0px;}
-    50%  {background-color:indigo; left:200px; top:200px;}
-    75%  {background-color:darkblue; left:0px; top:200px;}
-    100% {background-color:black; left:0px; top:0px;}
+.portfolio_header h1 {
+    position: relative;
+    display: inline-block;
+    font-size: 6rem;
+    font-weight: 500;
+    animation: float 5s ease-in-out infinite;
   }
 
 .portfolio_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-bottom: 4%;
-
 }
 
 .portfolio_item {
     background: var(--color-bg-variant);
-    padding: 0.9rem 0.5rem;
+    padding: 1.9rem 1.5rem;
     border-radius: 1.3rem;
     border: 1px solid transparent;
-    background-color: rgb(225, 222, 252);
-    color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgb(136, 130, 193);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-image: linear-gradient(to top right, rgb(179, 179, 179), rgb(36, 80, 99));
+    color: white;
+    text-align: center;
     transition: 0.3s;
-
 }
 
 .portfolio_item:hover {
     border-color: var(--color-primary-variant);
+    border: 1px solid transparent;
     background: transparent;
-    color: white;
+    color: whitesmoke;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
