--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: rgb(4, 4, 93);
-  background-image: linear-gradient(to right, blue, indigo, purple);
+  /* background-image: linear-gradient(to right, blue, indigo, purple); */
+  /* background: linear-gradient(to bottom, #2D2E4F, #5574B9, #92B4F4, #F7D4A4, #F79E7B, #F65248); */
+  background: linear-gradient(to top, #010c21, #203043, #3f5e9b, #c2d3da);
   color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  /* background-color: #ccc; */
+  background-size: cover;
+  /* background-position: 50% 50%; */
 }
 
 html {
